Add "Release Series" to <title> and <h1>. Restore a kind of announcement, significantly compress the Release History section.

--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -1,35 +1,33 @@
 <html>
 
 <head>
-<title>GCC 3.2</title>
+<title>GCC 3.2 Release Series</title>
 </head>
 
 <body>
 
-<h1>GCC 3.2</h1>
-<p>The current release in the GCC 3.2 series is
-<a href="#3.2.2">GCC 3.2.2</a>.</p>
-<p>A detailed description of this series and its releases is given
-on the <a href="changes.html">Changes</a> page.</p>
+<h1>GCC 3.2 Release Series</h1>
+
+<p>February 5, 2003</p>
+
+<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 3.2.2.</p>
+
+<p>Detailed news and a list of bug-fixes can be found at the
+<a href="changes.html">changes page</a>.</p>
 
 <h2>Release History</h2>
 
 <dl>
 <dt><a name="3.2.2">February 5, 2003</a></dt>
-<dd><p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-  developers are pleased to announce the release of <b>GCC 3.2.2</b>.
-  News and bugfix lists can be found in the respective
-  <a href="changes.html#3.2.2">Changes</a> section.</p></dd>
+<dd>(<a href="changes.html#3.2.2">changes</a>)
+</dd>
 <dt><a name="3.2.1">November 19, 2002</a></dt>
-<dd><p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-  developers are pleased to announce the release of <b>GCC 3.2.1</b>.
-  Please take a look at the <a href="changes.html#3.2.1">Changes</a>
-  section for further information.</p></dd>
+<dd>(<a href="changes.html#3.2.1">changes</a>)
+</dd>
 <dt><a name="3.2">August 14, 2002</a></dt>
-<dd><p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
-  developers are pleased to announce the release of <b>GCC 3.2</b>.
-  The <a href="changes.html#3.2">Changes</a> section contains
-  important information about this release.</p></dd>
+<dd>(<a href="changes.html#3.2">changes</a>)
+</dd>
 </dl>
 
 <h2>References and Acknowledgements</h2>
@@ -55,8 +53,5 @@ group of volunteers</a> is what makes GCC successful.</p>
 one of the <a href="http://www.gnu.org/order/ftp.html">GNU mirror sites</a>,
 or <a href="../cvs.html">our CVS server</a>.</p>
 
-<hr />
-
 </body>
 </html>
-
