Add version numbers missing from previous patch.

--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -19,14 +19,17 @@ developers are pleased to announce the release of GCC 3.2.2.</p>
 <h2>Release History</h2>
 
 <dl>
-<dt><a name="3.2.2">February 5, 2003</a></dt>
-<dd>(<a href="changes.html#3.2.2">changes</a>)
+<dt>GCC 3.2.2</dt>
+<dd><a name="3.2.2">February 5, 2003</a></dt>
+    (<a href="changes.html#3.2.2">changes</a>)
 </dd>
-<dt><a name="3.2.1">November 19, 2002</a></dt>
-<dd>(<a href="changes.html#3.2.1">changes</a>)
+<dt>GCC 3.2.1</dt>
+<dd><a name="3.2.1">November 19, 2002</a></dt>
+    (<a href="changes.html#3.2.1">changes</a>)
 </dd>
-<dt><a name="3.2">August 14, 2002</a></dt>
-<dd>(<a href="changes.html#3.2">changes</a>)
+<dt>GCC 3.2</dt>
+<dd><a name="3.2">August 14, 2002</a></dt>
+    (<a href="changes.html#3.2">changes</a>)
 </dd>
 </dl>
 
