--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -20,15 +20,15 @@ developers are pleased to announce the release of GCC 3.2.2.</p>
 
 <dl>
 <dt>GCC 3.2.2</dt>
-<dd><a name="3.2.2">February 5, 2003</a></dt>
+<dd><a name="3.2.2">February 5, 2003</a>
     (<a href="changes.html#3.2.2">changes</a>)
 </dd>
 <dt>GCC 3.2.1</dt>
-<dd><a name="3.2.1">November 19, 2002</a></dt>
+<dd><a name="3.2.1">November 19, 2002</a>
     (<a href="changes.html#3.2.1">changes</a>)
 </dd>
 <dt>GCC 3.2</dt>
-<dd><a name="3.2">August 14, 2002</a></dt>
+<dd><a name="3.2">August 14, 2002</a>
     (<a href="changes.html#3.2">changes</a>)
 </dd>
 </dl>
