Slightly readjust intro/announcement. Remove duplicate link to the changes pages.

--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -8,18 +8,19 @@
 
 <h1>GCC 3.2 Release Series</h1>
 
-<p>The purpose of this release series is to provide a stable platform for OS
-distributors to use building their next releases.  A primary objective was
-to stabilize the C++ ABI; we believe that the interface to the compiler and
-the C++ standard library are now relatively stable.</p>
-
-<p>Be aware that C++ code compiled by GCC 3.2.x will (in general) not
-interoperate with code compiled by GCC 3.1.1 or earlier.</p>
-
 <p>February 5, 2003</p>
 
 <p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
 developers are pleased to announce the release of GCC 3.2.2.</p>
+
+<p>The purpose of the GCC 3.2 release series is to provide a stable
+platform for OS distributors to use building their next releases.  A
+primary objective was to stabilize the C++ ABI; we believe that the
+interface to the compiler and the C++ standard library are now relatively
+stable.</p>
+
+<p>Be aware that C++ code compiled by GCC 3.2.x will (in general) not
+interoperate with code compiled by GCC 3.1.1 or earlier.</p>
 
 <p>Detailed news and a list of bug-fixes can be found at the
 <a href="changes.html">changes page</a>.</p>
@@ -50,9 +51,9 @@ GNU Compiler Collection.</p>
 <p>A list of <a href="buildstat.html">successful builds</a> is updated
 as new information becomes available.</p>
 
-<p>The GCC developers would like to thank the numerous people that
-have contributed <a href="changes.html">new features, improvements,
-bug fixes, and other changes</a> as well as test results to GCC.
+<p>The GCC developers would like to thank the numerous people that have
+contributed new features, improvements, bug fixes, and other changes as
+well as test results to GCC.
 This <a href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
 group of volunteers</a> is what makes GCC successful.</p>
 
