--- a/htdocs/gcc-3.2/index.html
+++ b/htdocs/gcc-3.2/index.html
@@ -22,8 +22,8 @@ stable.</p>
 <p>Be aware that C++ code compiled by GCC 3.2.x will (in general) not
 interoperate with code compiled by GCC 3.1.1 or earlier.</p>
 
-<p>Detailed news and a list of bug-fixes can be found at the
-<a href="changes.html">changes page</a>.</p>
+<p>Please refer to our <a href="changes.html">detailed list of news,
+caveats, and bug-fixes</a> for further information.</p>
 
 <h2>Release History</h2>
 
