XHTML compatibility fixes.
	* htdocs/contributewhy.html: Turn element names into lowercase.
	* htdocs/frontends.html: Remove spurious </a>.
	* htdocs/gnats.html: Open <body> before <h1>, not after it.
	* htdocs/gcc-3.0/caveats.html: Add </li>.
	* htdocs/news/ssa.html: Turn element names into lowercase.

--- a/htdocs/contributewhy.html
+++ b/htdocs/contributewhy.html
@@ -1,12 +1,12 @@
-<HTML>
+<html>
 
-<HEAD>
-<TITLE>Extending and Contributing to GCC</TITLE>
-</HEAD>
+<head>
+<title>Extending and Contributing to GCC</title>
+</head>
 
-<BODY>
+<body>
 
-<H1>Extending and Contributing to GCC</H1>
+<h1>Extending and Contributing to GCC</h1>
 
 <p>If you are writing a major extension to GCC, such as a port to a
 new computer, a new language, or a major rewrite of some optimization
