--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -13,7 +13,7 @@
   the strictest aliasing rules applicable to the language being
   compiled.  For C and C++, this activates optimizations based on the
   type of expressions.  This optimization may thus break old,
-  non-compliant code.
+  non-compliant code.</li>
 
   <li>Enumerations are now properly promoted to <code>int</code> in
   function parameters and function returns.  Normally this change is
