--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -57,7 +57,7 @@ GCC, nor is the front-end likely to change to a more normal interface
 of linking directly to the back end.</li>
 
 <li>The Ksi 
-language</a> provides a thin interface to GCC trees with lispy syntax.
+language provides a thin interface to GCC trees with lispy syntax.
 It is meant as an intermediate language, used for example by the
 <a href="http://gont.pld.org.pl/">Gont</a> compiler.</li>
 
