* gcj-3.3-status.html (Mauve): Updated status.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -136,8 +136,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td> <a href="http://sources.redhat.com/mauve/">Mauve</a> </td>
-     <td> &nbsp; </td>
-     <td> &nbsp; </td>
+     <td> Some unanalyzed failures </td>
+     <td> Mark Wielaard </td>
 </tr>
 
 <tr bgcolor='#aaeeee'> <td> <a href="http://www-124.ibm.com/developerworks/oss/cvs/jikes/~checkout~/jacks/jacks.html">Jacks</a> </td>
