--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -34,11 +34,9 @@ the test suite directories.</p>
       <a href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults
       mailing list</a>.</li>
 
-  <li>Loren J. Rittle operates daily builds and regression tests with
-      machine time donated by the FreeBSD project.  There is additional
-      and consolidated information available at
-      <a href="http://people.freebsd.org/~ljrittle/daily-gcc-bootstrap-reports/">
-      this web site</a></li>
+  <li><a href="http://people.freebsd.org/~ljrittle/daily-gcc-bootstrap-reports/">
+      Loren J. Rittle operates daily builds and regression tests</a> with
+      machine time donated by the FreeBSD project.</li>
 
   <li>Robert Schiele's nightly testing reports bootstrap failures to the
       gcc-testresults mailing list as well as reporting test results for
@@ -46,6 +44,13 @@ the test suite directories.</p>
       <a href="http://pi3.informatik.uni-mannheim.de/~schiele/autobuild/">
       this web site</a>.  As with any such tools, please read the
       documentation before using them.</li>
+
+  <li>Michael Chastain runs the GDB test suite regularly and looks for
+      regressions caused by GCC debug output changes.  He tests native
+      i686-pc-linux-gnu once every 4-10 days, and reports to the <a
+      href="http://gcc.gnu.org/ml/gcc-testresults/">gcc-testresults</a>
+      and <a href="http://sources.redhat.com/ml/gdb-testers">gdb-testers</a>
+      mailing lists.</li>
 </ul>
 
 <h2>Ideas for further testing</h2>
