Detail ABI breakage and its fix in GCC 3.2.2 a bit.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -102,6 +102,13 @@ new features that were not present in GCC 3.2.1.</p>
 
 <h3>Bug Fixes</h3>
 
+<p>On the following i386-based systems GCC 3.2.1 broke the C ABI wrt.
+functions returning structures: Cygwin, FreeBSD (GCC 3.2.1 as shipped
+with FreeBSD 5.0 does not have this problem), Interix, a.out-based Linux
+and NetBSD, OpenBSD, and Darwin.  GCC 3.2.2 reverts this ABI change, and
+thus restores ABI-compatibility with previous releases (except GCC 3.2.1)
+on these platforms.</p>
+	
 <p>This section lists the problem reports (PRs) from GCC's bug tracking
 system (GNATS) that are known to be fixed in the 3.2.2 release. This
 list might not be complete (that is, it is possible that some PRs
