Mention contribution of Cirrus EP9312 port (ARM variant)

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -80,6 +80,14 @@
     Enabled at run time with the <code>-m2e</code> command line
     switch, or at configure time by specifying sh2e as the machine
     part of the target triple.</li>
+    
+    <li>Support for the Cirrus EP9312 Maverick floating point
+    co-processor added to the ARM port.  Enabled at run time with the
+    <code>-mcpu=ep9312</code> command line switch.  Note however that
+    the multilibs to support this chip are currently disabled in
+    gcc/config/arm/t-arm-elf, so if you want to enable their
+    production you will have to uncomment the entries in that
+    file.</li>
   </ul>
 
 
