Move some details on the steering committee from the main page to the specific steering committee page.  Try to make the presentation of our history a bit more precise.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -17,9 +17,7 @@ languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).</p>
 
 <p>Major decisions about GCC are made by the <a href="steering.html">
 steering committee</a>, guided by the <a href="gccmission.html">
-mission statement</a>.  That group began as the egcs steering
-committee and in April 1999 was appointed by the FSF as the official
-GNU maintainer for GCC.</p>
+mission statement</a>.</p>
 
 <p>We encourage everyone to <a href="contribute.html">contribute changes</a>
 and help testing GCC, and we provide access to our development sources with
