Add <code> ... </code> around path name.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -85,7 +85,7 @@
     co-processor added to the ARM port.  Enabled at run time with the
     <code>-mcpu=ep9312</code> command line switch.  Note however that
     the multilibs to support this chip are currently disabled in
-    gcc/config/arm/t-arm-elf, so if you want to enable their
+    <code>gcc/config/arm/t-arm-elf</code>, so if you want to enable their
     production you will have to uncomment the entries in that
     file.</li>
   </ul>
