Add entries for 3.2.2:   hppa1.1-hp-hpux11.11   hppa2.0w-hp-hpux11.00 (binutils 2.13.1)   i686-pc-linux-gnu (athlon)     (Debian 3.0, binutils 2.13, glibc 2.3.1, kernel 2.5.53)   i686-pc-linux-gnu (Red Hat 7.2, binutils 2.13.1); plus test results   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.18); test results   i686-pc-sco3.2v5.0.6   mips-sgi-irix6.5   powerpc-ibm-aix5.1.0.0   sparc-sun-solaris2.8 (binutils 2.13.1)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -111,7 +111,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa1.1-hp-hpux11.11</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01902.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01902.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00425.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
@@ -121,6 +123,16 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00526.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>binutils 2.13.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00273.html">3.2.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00337.html">3.2.2</a>
 </td>
 </tr>
 
@@ -333,6 +345,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu (athlon)</td>
+<td>Debian 3.0, binutils 2.13, glibc 2.3.1, kernel 2.5.53</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00463.html">3.2.2</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Debian 3.0 Woody, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful:
@@ -453,6 +472,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, binutils 2.13.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00273.html">3.2.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00335.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.90, kernel 2.4.18</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01589.html">3.2</a>
@@ -478,6 +507,17 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01000.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00402.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00398.html">3.2.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00440.html">3.2.2</a>
 </td>
 </tr>
 
@@ -564,7 +604,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-sco3.2v5.0.6</td>
 <td>SCO OpenServer 5.0.6A</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00031.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00031.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00422.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
@@ -623,6 +665,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01171.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>IRIX 6.5</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00345.html">3.2.2</a></td>
 </tr>
 
 <tr>
@@ -705,7 +754,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01145.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01043.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01043.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00341.html">3.2.2</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00632.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00981.html">3.2.1</a>
@@ -873,7 +923,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>binutils 2.13.1</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01041.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01041.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00273.html">3.2.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00336.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
