Update expected test results with a patch from Krister Walfridsson <cato@df.lth.se>.

--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -81,47 +81,37 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>arm-elf</td>
  <td>arm-sim</td>
- <td>2001-11-11</td>
- <td></td>
-</tr>
-
-<tr valign="top">
- <td>m32r-elf</td>
- <td>m32r-sim</td>
- <td>2002-01-24</td>
- <td>Unexpected failures: C: 30, C++: 1, Fortran: 481, ObjC: 4.</td>
+ <td>2003-02-09</td>
+ <td>Unexpected failures: C: 13, C++: 16, Fortran: 34.</td>
 </tr>
 
 <tr valign="top">
  <td>mips-elf</td>
  <td>mips-sim</td>
- <td>2001-07-31</td>
- <td>Many unexpected failures for C++: 119 and Fortran: 398.</td>
+ <td>2003-02-09</td>
+ <td>Unexpected failures: C: 30, C++: 166, Fortran: 603.</td>
 </tr>
 
 <tr valign="top">
  <td>mn10300-elf</td>
  <td>mn10300-sim</td>
- <td>2002-01-24</td>
+ <td>2003-02-09</td>
  <td>CC0 target.
- Unexpected failures: C: 23, C++: 5, Fortran: 45, ObjC: 467.</td>
+ Unexpected failures: C: 51, C++: 43, Fortran: 57.</td>
 </tr>
 
 <tr valign="top">
  <td>powerpc-eabisim</td>
  <td>powerpc-sim</td>
- <td>Daily build</td>
- <td>This target is used by <a
- href="http://people.redhat.com/geoffk/gcc-regression/">an automatic
- regression tester</a>.  It'll complain to you by email if you break it.
- Many unexpected Fortran failures on 2001-07-30: 60.</td>
+ <td>2003-02-09</td>
+ <td>Unexpected failures: C: 76, C++: 60, Fortran: 41.</td>
 </tr>
 
 <tr valign="top">
  <td>sh-elf</td>
  <td>sh-hms-sim</td>
- <td>2002-01-24</td>
- <td>Many unexpected failures for Fortran: 481 and ObjC: 467.</td>
+ <td>2003-02-09</td>
+ <td>Unexpected failures: C: 12, C++: 53, Fortran: 603.</td>
 </tr>
 
 <tr valign="top">
