--- a/htdocs/projects/cxx-reflection/index.html
+++ b/htdocs/projects/cxx-reflection/index.html
@@ -62,13 +62,13 @@ for it.</p>
 latest merge tag is always added to GCC's version string.  A merge may
 be postponed if there is major breakage in mainline.</p>
 
-<p>Work from the branch will be incorporated into mainline only when if 
+<p>Work from the branch will be incorporated into mainline only if 
 <ol> 
 <li>it can be proved that it provides better way to implement an
 existing standard feature; or</li>
-<li>it aims at implementing features under standardization; or <li>
+<li>it aims at implementing features under standardization; or</li>
 <li>its specifications are clearly written in Standardeze and its
-usefulness is acknowledged and accepted by the C++ front-end maintainers.
+usefulness is acknowledged and accepted by the C++ front-end maintainers.</li>
 </ol>
 
 </body>
