Remove broken mirror, update/fix two URLs, and remove embarrassing link to www.tuxedo.org (which now performs redirects to "random" third pages).

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -159,10 +159,8 @@ than we've had before.</p>
   past few months.  The paper which started all of this introduced two
   terms:  A <b>cathedral</b> development model versus a <b>bazaar</b>
   development model.  The paper is written by Eric S. Raymond, it is
-  called ``<a
-  href="http://www.tuxedo.org/~esr/writings/cathedral-bazaar/">The
-  Cathedral and the Bazaar</a>''.  The paper is a useful starting point
-  for discussions.
+  called ``The Cathedral and the Bazaar</a>''.
+  The paper is a useful starting point for discussions.
 </blockquote>
 
 
