--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -341,7 +341,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Caldera 2.4, glibc 2.1.2, kernel 2.2.14</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01167.html.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01167.html">3.2</a></td>
 </tr>
 
 <tr>
