Fix incorrect link to "work on prefetching".

--- a/htdocs/gcc-3.3/c99status.html
+++ b/htdocs/gcc-3.3/c99status.html
@@ -355,7 +355,7 @@ implementations behave the same way as GCC.</li>
 
 <li>The information provided by <code>static</code> in parameter array
 declarators is not used for optimization.  It might make sense to use
-it in future in conjunction with <a href="projects/prefetch.html">work
+it in future in conjunction with <a href="../projects/prefetch.html">work
 on prefetching</a>.</li>
 
 <li>The list above differs from that in the C99 standard (as amended
