Tweak GCJ news entry.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,7 +91,7 @@ to maintain and improve quality.</p>
 
 <dd>
 Andrew Haley of Red Hat completed the work began by Bo Thorsen of SuSE
-to port <a href="java/index.html">gcj</a> to the AMD x86-64
+to port <a href="java/">GCJ</a> to the AMD x86-64
 architecture.  This is the first implementation of the Java
 programming language to be made available on that platform.  It will
 be part of the GCC 3.3 release.
