--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -143,7 +143,8 @@ to a comparison of libgcj with the JDK.</p>
 supported.</dd>
 <dt class="target">SGI Irix 6.5 on Mips
   (<code>mips-sgi-irix6.5</code>)</dt>
-<dd>Works, but some tricks needed.</dd>
+<dd>Some tricks required to build.  Byte-code interpreter not
+currently supported.  No SEGV handler available.</dd>
 <dt class="target">Windows on the Intel PC platform, using the MingW32 compiler
   (<code>i[56]86-pc-mingw32</code>)</dt>
 <dd>Works for target; works for host (in CVS).  Is incomplete.</dd>
