--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -157,13 +157,15 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>dfa-branch</dt>
   <dd>This branch contains the insn scheduler with an automaton
-  based pipeline hazard recognizer.  </dd>
+  based pipeline hazard recognizer.</dd>
 
   <dt><a href="projects/cfg.html">cfg-branch</a></dt>
-  <dd></dd>
+  <dd>The purpose of this branch is to work on improving GCC's
+  infrastructure for RTL based optimizers.</dd>
 
   <dt><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></dt>
-  <dd></dd>
+  <dd>The purpose of this branch is to work on improving GCC's tree
+  based optimizations.</dd>
 
   <dt>hammer-3_3-branch</dt>
   <dd>The goal of this branch is to have a stable
@@ -215,7 +217,7 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>This branch is created to develop and
   test infrastructure for easier writing of new optimizations.  Some new
   passes (such as superblock formation, loop peeling, web construction,
-  branch combining etc.)  are being implemented there.</dd>
+  branch combining etc.) are being implemented there.</dd>
 
   <dt>rtlopt-branch</dt>
   <dd>This branch is equivalent to the cfg-branch with the exception that it
@@ -227,13 +229,14 @@ particular releases or snapshots or the latest snapshot.  </p>
   the mainline at the beginning of development stage 1 for gcc 3.4
   (<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01575.html">more information</a>).</dd>
 
+  <dt><a href="projects/cxx-reflection/">cxx-reflection-branch</a></dt>
+  <dd>Part of the work on providing support for compile time
+  reflection in C++ is done in this branch.</dd>
+
   <dt>bnw-simple-branch</dt>
   <dd></dd>
 
   <dt>condexec-branch</dt>
-  <dd></dd>
-
-  <dt>cxx-reflection-branch</dt>
   <dd></dd>
 
   <dt>cygwin-mingw-v2-branch</dt>
