Suggest ChangeLog format for changes ported from one branch to a different one. Originally by Eric Botcazou <ebotcazou@libertysurf.fr>.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -58,6 +58,11 @@ in comments rather than the ChangeLog, though a single line overall
 description of the changes may be useful above the ChangeLog entry for
 a large batch of changes.</p>
 
+<p>For changes that are ported from another branch, we recommend to
+use a single entry whose body contains a verbatim copy of the original
+entries describing the changes on that branch, possibly preceded by a
+single-line overall description of the changes.</p>
+
 <p>There is no established convention on when ChangeLog entries are to
 be made for testsuite changes; see messages <a
 href="http://gcc.gnu.org/ml/gcc/2000-09/msg00287.html">1</a> and <a
