Add new entries for 3.2.2:   alphaev6-dec-osf4.0f   i686-pc-cygwin (Cygwin 1.3.20-1)   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.20)   i686-pc-linux-gnu (SuSE 8.1, glibc 2.2.5, kernel 2.4.19)   sparc-sun-solaris2.8

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -84,6 +84,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev6-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java, ObjC):
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00748.html">3.2.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00623.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev67-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -320,6 +330,15 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.20-1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01046.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01104.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -523,6 +542,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01091.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 8.0, glibc 2.2.93, kernel 2.4.18</td>
 <td>Successful (with tweaks):
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00509.html">3.2</a></td>
@@ -591,6 +617,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00488.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00634.html">3.2.2</a></td>
 </tr>
 
 <tr>
@@ -904,8 +937,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01700.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00950.html">3.2.1</a>
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00971.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00950.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00971.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00897.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01006.html">3.2.2</a>
 </td>
 </tr>
 
