Add references to recent new pages in bugs/, for debugging a segfault, minimizing a test case, and hunting regressions.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -289,6 +289,19 @@ the bug is a regression.</li>
 <li>Add a bug report referencing the test-case to GNATS.</li>
 </ol>
 
+<p>If you want to provide additional information in the bug tracking
+system about a reported bug:</p>
+<ol>
+<li>If the bug is a segmentation fault in the compiler,
+<a href="bugs/segfault.html">provide information about its location</a>.
+</li>
+<li><a href="bugs/minimize.html">Minimize the test case</a>.</li>
+<li>Try the test case with earlier and later versions of GCC to
+determine which versions it affects and whether it is a regression.
+If it is a regression, <a href="bugs/reghunt.html">identify the
+patch</a> that introduced it.</li>
+</ol>
+
 <p>If you fix a bug for which there is already a GNATS entry:</p>
 <ol>
 <li>Remove the XFAIL on the test-case.</li>
