* Elaborate on which branches are tested and shown by Flametree.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -22,7 +22,9 @@ the test suite directories.</p>
 <ul>
   <li>Ben Elliston operates a Tinderbox-style build and regression
       testing presentation system called
-      <a href="http://people.redhat.com/bje/flametree/">Flametree</a>.</li>
+      <a href="http://people.redhat.com/bje/flametree/">Flametree</a>.
+      All actively maintained branches are tested. Presently, only
+      native <tt>i686-pc-linux-gnu</tt> compilers are tested.</li>
 
   <li>Phil Edwards runs a build and regression tester referred to as
       the <a href="http://www.devphil.com/build/">Autocrasher</a>, which
