* faq.html (1.7): Use correct name for shared library.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -166,7 +166,7 @@
           much like a traditional virtual machine. You can even use "gij" to run a shared library 
           which is compiled from java code and contains a main method:</p>
           <pre>
-$ gcj -shared -o HelloWorld.so HelloWorld.java
+$ gcj -shared -o lib-HelloWorld.so HelloWorld.java
 $ gij HelloWorld
           </pre>
           This works because gij uses Class.forName, which knows how to load shared objects.
