* faq.html (1.7): Interpreter works on several platforms.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -160,7 +160,7 @@
           not found in the application binary or linked shared libraries, the class loader
           will search for a bytecode version in your classpath, much like a VM would. Be
           sure to build libgcj with the --enable-interpreter option to enable this
-          functionality. Currently this only works on x86 linux.</p>
+          functionality.</p>
         
           <p>The program "gij" provides a front end to the interpreter that behaves
           much like a traditional virtual machine. You can even use "gij" to run a shared library 
