* index.html: Mention GNU Crypto. 	* status.html: Link to japi page.  Mention GNU Crypto.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -58,6 +58,11 @@ href="http://sources.redhat.com/rhug/">rhug</a> project.  Both sources
 and RPMs are available.
 </p>
 
+<p>
+For <code>javax.crypto</code> support, we recommend the use of
+<a href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>.
+</p>
+
 <br />
 <br />
 
