--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -39,7 +39,7 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
 <li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)</li>
 <li>Gerald Pfeifer (Vienna University of Technology)</li>
 <li>Joel Sherrill (OAR Corporation)</li>
-<li>Jim Wilson (Red Hat)</li>
+<li>Jim Wilson</li>
 </ul>
 
 <p><small>Membership in the steering committee is a personal membership.
