--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -206,20 +206,20 @@ different programming languages.</p>
     <td>C++</td>
     <td>20001213</td>
     <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">blitz-20001213.tar.gz</a></td>
-    <td><a href="testing-blitz.html">build and test guide</a></td>
+    <td><a href="../testing/testing-blitz.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.boost.org/">Boost</a></td>
     <td>C++</td>
     <td>1.22.0</td> <!-- the download link they give here isn't versioned... -->
     <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
-    <td><a href="testing-boost.html">build and test guide</a></td>
+    <td><a href="../testing/testing-boost.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://superbeast.ucsd.edu/~landry/FTensor/">FTensor</a></td>
     <td>C++</td>
     <td>1.1 patch 16</td>
     <td><a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
          FTensor_gcc_integration_test.tar.gz</a></td>
-    <td><a href="testing-ftensor.html">build and test guide</a></td>
+    <td><a href="../testing/testing-ftensor.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
     <td>C</td>
@@ -231,7 +231,7 @@ different programming languages.</p>
     <td>Fortran</td>
     <td>3.0</td>
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">LAPACK (testing programs)</a></td>
-    <td><a href="testing-lapack.html">build and test guide</a></td>
+    <td><a href="../testing/testing-lapack.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
     <td>C</td>
@@ -252,13 +252,13 @@ different programming languages.</p>
     <td>C++</td>
     <td>2.3.0</td>
     <td><a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/pooma-gcc.tar.gz">pooma-gcc.tar.gz</a></td>
-    <td><a href="testing-pooma.html">build and test guide</a></td>
+    <td><a href="../testing/testing-pooma.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
     <td>C++</td>
     <td>2.3.0</td>
     <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">qt-x11-2.3.0.tar.gz</a></td>
-    <td><a href="testing-qt.html">build and test guide</a></td>
+    <td><a href="../testing/testing-qt.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://root.cern.ch/">root</a></td>
     <td>C++</td>
