Add entries for GCC 3.2:   alpha-dec-osf4.0f   hppa1.1-hp-hpux10.20 (binutils 2.13)   i386-pc-solaris2.8   i386-unknown-openbsd3.1 (OpenBSD 3.1)   i686-pc-linux-gnu (Mandrake 9.0, glibc 2.2.5, kernel 2.4.19)   i686-pc-linux-gnu (Red Hat 7.1, glibc 2.2.4, kernel 2.4.2)   i686-pc-linux-gnu (athlon) (Red Hat 8.0, glibc 2.2.93, kernel 2.4.18)   i686-pc-linux-gnu (Red Hat 8.0, glibc 2.2.93)   i686-pc-linux-gnu (SuSE 8.0, glibc 2.2.4, kernel 2.4.18)   i686-pc-linux-gnu (SuSE 8.1, glibc 2.2.5, kernel 2.4.19)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -26,7 +26,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>Tru64 4.0f</td>
 <td>Successful (with tweaks):
-<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01256.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01256.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01261.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
@@ -118,6 +120,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux10.20</td>
+<td>binutils 2.13</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01399.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux11.11</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -205,6 +215,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01130.html">3.2.2</a></td>
+</tr>
+
+<tr>
 <td>i386-pc-solaris2.9</td>
 <td>Solaris 9</td>
 <td>Successful:
@@ -244,7 +261,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-unknown-openbsd3.1</td>
 <td>OpenBSD 3.1</td>
 <td>Successful (C, C++, F77):
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00077.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00077.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01635.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
@@ -439,6 +458,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 9.0, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01382.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00937.html">3.2</a></td>
@@ -455,7 +481,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.2</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00286.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00286.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01584.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
@@ -558,7 +586,17 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu (athlon)</td>
 <td>Red Hat 8.0, glibc 2.2.93, kernel 2.4.18</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00989.html">3.2.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00989.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01139.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 8.0, glibc 2.2.93</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01131.html">3.2.2</a>,
+</td>
 </tr>
 
 <tr>
@@ -621,9 +659,18 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>SuSE 8.0, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01196.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 8.1, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00634.html">3.2.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg00634.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01793.html">3.2.2</a>
+</td>
 </tr>
 
 <tr>
